--- a/MyNotebook.ipynb
+++ b/MyNotebook.ipynb
@@ -22,7 +22,7 @@
     "import MySQLdb\n",
     "\n",
     "db = MySQLdb.connect(user = \"root\",\n",
-    "                     passwd = \"1484\",\n",
+    "                     passwd = \"XXXX\",\n",
     "                     host = \"localhost\",\n",
     "                     port = 3306,\n",
     "                     use_unicode = True)\n",
