--- a/OpenStackCodeReview MetricsPandas .ipynb
+++ b/OpenStackCodeReview MetricsPandas .ipynb
@@ -26,7 +26,7 @@
     "\n",
     "def connect():\n",
     "   user = \"root\"\n",
-    "   password = \"1484\"\n",
+    "   password = \"xxx\"\n",
     "   host = \"localhost\"\n",
     "   db = \"openstack_reviews\"\n",
     "\n",
